# simpliibarrii-crypto-raven-biocomputer

./: .dockerignore  .gitignore  .ruff.toml  Dockerfile  LICENSE  Makefile  README.md  app.py  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  runtime-taste-audit.yml
configs/: default.yaml
docs/: ARCHITECTURE.md  HUGGINGFACE.md  INTEGRATION.md  ROADMAP.md  SECURITY.md
examples/: example_run.py
raven_biocomputer/: __init__.py  api.py  cli.py  executor.py  integrations.py  mcp_server.py  models.py  policy.py  security.py  tools.py  workspace.py
schemas/: biocomputer.run.v1.json
scripts/: public_release_check.py
tests/: test_executor.py  test_policy.py  test_security.py  test_tools.py
