[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raven-biocomputer"
version = "0.1.0"
description = "A private, auditable biology workstation for AI agents in the Raven ecosystem."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Barry Clerjuste" }]
keywords = [
  "agentic-ai",
  "biology",
  "bioinformatics",
  "local-first",
  "reproducible-science",
  "computer-use",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.115,<1", "uvicorn>=0.34,<1"]
space = ["gradio>=5,<7"]
mcp = ["mcp>=1.28,<2"]
dev = ["pytest>=8.3,<10", "ruff>=0.9,<1"]
all = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.34,<1",
  "gradio>=5,<7",
  "mcp>=1.28,<2",
  "pytest>=8.3,<10",
  "ruff>=0.9,<1",
]

[project.scripts]
raven-biocomputer = "raven_biocomputer.cli:main"
raven-biocomputer-mcp = "raven_biocomputer.mcp_server:main"

[tool.setuptools]
packages = ["raven_biocomputer"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
